--- a/package.json
+++ b/package.json
@@ -24,39 +24,40 @@
   },
   "dependencies": {
     "@dword-design/depcheck-parser-sass": "^4.0.4",
-    "@dword-design/eslint-config": "^5.0.1",
-    "@dword-design/functions": "^6.0.0",
-    "@dword-design/vite-plugin-vue-babel": "^1.0.0",
+    "@dword-design/vite-plugin-vue-babel": "^1.0.2",
     "@semantic-release/exec": "^6.0.3",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "depcheck-bin-name": "^1.0.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "dedent": "^1.6.0",
+    "depcheck-bin-name": "^1.0.1",
     "depcheck-package-name": "^3.0.1",
     "depcheck-parser-vue": "^5.0.0",
-    "execa": "^9.5.2",
-    "fs-extra": "^11.1.0",
+    "execa": "^9.6.0",
+    "fs-extra": "^11.3.0",
     "load-pkg": "^4.0.0",
     "lodash-es": "^4.17.21",
-    "output-files": "^2.0.0",
-    "publish-browser-extension": "^2.1.3",
-    "vite": "^5.1.4",
-    "vite-plugin-babel": "^1.2.0",
+    "publish-browser-extension": "^2.3.1",
+    "vite": "^6.3.5",
+    "vite-plugin-babel": "^1.3.1",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-web-extension": "^4.1.1",
+    "vite-plugin-web-extension": "^4.4.3",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.21"
+    "vue": "^3.5.16"
   },
   "devDependencies": {
-    "@dword-design/base": "^11.0.2",
-    "@dword-design/puppeteer": "^7.0.0",
-    "@dword-design/tester": "^2.0.4",
-    "@dword-design/tester-plugin-tmp-dir": "^2.0.3",
+    "@dword-design/base": "^12.0.18",
+    "@dword-design/puppeteer": "^7.0.2",
+    "@dword-design/tester": "^2.0.19",
+    "@dword-design/tester-plugin-tmp-dir": "^2.1.26",
     "@mdi/svg": "^7.4.47",
-    "express": "^4.17.1",
-    "globby": "^14.0.0",
-    "webextension-polyfill": "^0.12.0",
-    "with-local-tmp-dir": "^5.0.1"
+    "@playwright/test": "^1.52.0",
+    "express": "^4.21.2",
+    "globby": "^14.1.0",
+    "output-files": "^2.0.32",
+    "playwright": "^1.52.0",
+    "playwright-chromium": "^1.52.0",
+    "webextension-polyfill": "^0.12.0"
   },
-  "packageManager": "pnpm@9.15.3+sha256.c1da43727ccbc1ed42aff4fd6bdb4b1e91e65a818e6efff5b240fbf070ba4eaf",
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "engines": {
     "node": ">=18"
   },
