--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,14 @@ jobs:
       - env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: pnpm test
-      - if: failure()
-        uses: actions/upload-artifact@v3
+      - if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: Image Snapshot Diffs
-          path: "**/__image_snapshots__/__diff_output__"
+          if-no-files-found: ignore
+          name: Images from tests
+          path: |-
+            **/__image_snapshots__/__diff_output__
+            test-results/*/**
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
