--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "load-pkg": "^4.0.0",
     "lodash-es": "^4.17.21",
     "publish-browser-extension": "^2.3.1",
-    "vite": "^6.3.5",
+    "vite": "^5.4.19",
     "vite-plugin-babel": "^1.3.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-web-extension": "^4.4.3",
@@ -45,12 +45,10 @@
   },
   "devDependencies": {
     "@dword-design/base": "^12.0.18",
-    "@dword-design/puppeteer": "^7.0.2",
-    "@dword-design/tester": "^2.0.19",
-    "@dword-design/tester-plugin-tmp-dir": "^2.1.26",
     "@mdi/svg": "^7.4.47",
     "@playwright/test": "^1.52.0",
     "express": "^4.21.2",
+    "get-port": "^7.1.0",
     "globby": "^14.1.0",
     "output-files": "^2.0.32",
     "playwright": "^1.52.0",
