--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,53 @@
 jobs:
-  build:
+  cancel-existing:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     steps:
       - env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: rokroskar/workflow-run-cleanup-action@v0.3.3
+  release:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           lfs: true
           ref: ${{ github.event.pull_request.head.repo.full_name == github.repository &&
             github.event.pull_request.head.ref || '' }}
       - uses: actions/setup-node@v4
         with:
-          check-latest: true
           node-version: 20
       - run: corepack enable
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "GitHub Actions"
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm checkUnknownFiles
+      - run: pnpm lint
+      - env:
+          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        name: Push changed files
+        run: pnpm dw-ci push-changed-files
+      - env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        if: github.ref == 'refs/heads/master'
+        name: Release
+        run: pnpm semantic-release
+  test:
+    needs: cancel-existing
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          lfs: true
+      - uses: actions/setup-node@v4
+        with:
+          check-latest: true
+          node-version: ${{ matrix.node }}
+      - run: corepack enable
       - run: pnpm install --frozen-lockfile
       - env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -31,21 +60,21 @@ jobs:
           path: |-
             **/__image_snapshots__/__diff_output__
             test-results/*/**
-      - uses: codecov/codecov-action@v3
+      - if: matrix.os == 'ubuntu-latest' && matrix.node == 20
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-      - run: pnpm checkUnknownFiles
-      - env:
-          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        name: Push changed files
-        run: pnpm dw-ci push-changed-files
-      - env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: github.ref == 'refs/heads/master'
-        name: Release
-        run: pnpm semantic-release
+    strategy:
+      matrix:
+        include:
+          - node: 18
+            os: ubuntu-latest
+          - node: 20
+            os: ubuntu-latest
+          - node: 20
+            os: macos-latest
+          - node: 20
+            os: windows-latest
 name: build
 on:
   pull_request: {}
