--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-web-extension": "^4.4.3",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.5.16"
+    "vue": "^3.5.16",
+    "wxt": "^0.20.6"
   },
   "devDependencies": {
     "@dword-design/base": "^12.0.18",
