--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@dword-design/depcheck-parser-sass": "^4.0.4",
     "@dword-design/vite-plugin-vue-babel": "^1.0.2",
+    "@puppeteer/browsers": "^2.10.5",
     "@semantic-release/exec": "^6.0.3",
     "@vitejs/plugin-vue": "^5.2.4",
     "dedent": "^1.6.0",
