--- a/.baserc.json
+++ b/.baserc.json
@@ -1,10 +1,9 @@
 {
   "depcheckConfig": {
     "ignoreMatches": [
-      "playwright",
-      "playwright-chromium"
+      "@playwright/browser-chromium",
+      "@types/chrome"
     ]
   },
-  "name": "@dword-design/node",
-  "testRunner": "playwright"
+  "name": "@dword-design/node"
 }
