--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,10 +19,12 @@
     ".vscode": true,
     "CHANGELOG.md": true,
     "LICENSE.md": true,
-    "babel.config.json": true,
+    "codecov": true,
+    "codecov.SHA256SUM": true,
+    "codecov.SHA256SUM.sig": true,
     "coverage": true,
     "dist": true,
-    "eslint.config.js": true,
+    "eslint.config.ts": true,
     "node_modules": true,
     "pnpm-lock.yaml": true
   },
