--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/chrome": "^0.1.1",
     "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash-es": "^4.17.12",
     "express": "^5.1.0",
     "get-port": "^7.1.0",
     "globby": "^14.1.0",
