--- a/package.json
+++ b/package.json
@@ -33,41 +33,28 @@
   "dependencies": {
     "@dword-design/base": "^15.2.3",
     "@dword-design/depcheck-parser-sass": "^5.0.0",
-    "@dword-design/vite-plugin-vue-babel": "^1.0.2",
     "@semantic-release/exec": "^6.0.3",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@wxt-dev/module-vue": "^1.0.2",
     "depcheck-bin-name": "^2.0.0",
     "depcheck-package-name": "^4.0.0",
     "endent": "npm:@dword-design/endent@^1.4.7",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.0",
     "ini": "^5.0.0",
-    "load-pkg": "^4.0.0",
     "lodash-es": "^4.17.21",
     "publish-browser-extension": "^2.3.1",
-    "vite": "^7.0.6",
-    "vite-plugin-babel": "^1.3.2",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-web-extension": "^4.4.5",
-    "vite-svg-loader": "^5.1.0",
-    "vue": "^3.5.18",
     "wxt": "npm:@dword-design/wxt-fork@^0.0.2"
   },
   "devDependencies": {
-    "@mdi/svg": "^7.4.47",
     "@playwright/browser-chromium": "^1.54.1",
     "@playwright/test": "^1.54.1",
-    "@types/chrome": "^0.1.1",
     "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.4",
     "@types/ini": "^4.1.1",
     "@types/lodash-es": "^4.17.12",
-    "@wxt-dev/module-vue": "^1.0.2",
     "express": "^5.1.0",
     "get-port": "^7.1.0",
-    "globby": "^14.1.0",
-    "output-files": "^3.0.0",
-    "webextension-polyfill": "^0.12.0"
+    "output-files": "^3.0.0"
   },
   "peerDependencies": {
     "depcheck": "*"
