--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
   "type": "module",
-  "exports": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": {
+        "default": "./dist/index.js",
+        "types": "./dist/index.d.ts"
+      }
+    }
+  },
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -19,44 +26,42 @@
     "lint": "base lint",
     "prepare": "base prepare",
     "prepublishOnly": "base prepublishOnly",
-    "test": "base test"
+    "test": "base test",
+    "typecheck": "base typecheck",
+    "verify": "base verify"
   },
   "dependencies": {
-    "@dword-design/depcheck-parser-sass": "^4.0.4",
-    "@dword-design/vite-plugin-vue-babel": "^1.0.2",
+    "@dword-design/base": "^15.2.3",
+    "@dword-design/depcheck-parser-sass": "^5.0.0",
     "@semantic-release/exec": "^6.0.3",
-    "@vitejs/plugin-vue": "^5.2.4",
-    "dedent": "^1.6.0",
-    "depcheck-bin-name": "^1.0.1",
-    "depcheck-package-name": "^3.0.1",
-    "depcheck-parser-vue": "^5.0.0",
+    "@wxt-dev/module-vue": "^1.0.2",
+    "depcheck-bin-name": "^2.0.0",
+    "depcheck-package-name": "^4.0.0",
+    "endent": "npm:@dword-design/endent@^1.4.7",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.0",
-    "load-pkg": "^4.0.0",
+    "ini": "^5.0.0",
     "lodash-es": "^4.17.21",
     "publish-browser-extension": "^2.3.1",
-    "vite": "^6.0.0",
-    "vite-plugin-babel": "^1.3.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-web-extension": "^4.4.3",
-    "vite-svg-loader": "^5.1.0",
-    "vue": "^3.5.16"
+    "wxt": "npm:@dword-design/wxt-fork@^0.0.2"
   },
   "devDependencies": {
-    "@dword-design/base": "^12.0.18",
-    "@mdi/svg": "^7.4.47",
-    "@playwright/test": "^1.52.0",
-    "express": "^4.21.2",
+    "@playwright/browser-chromium": "^1.54.1",
+    "@playwright/test": "^1.54.1",
+    "@types/express": "^5.0.3",
+    "@types/fs-extra": "^11.0.4",
+    "@types/ini": "^4.1.1",
+    "@types/lodash-es": "^4.17.12",
+    "express": "^5.1.0",
     "get-port": "^7.1.0",
-    "globby": "^14.1.0",
-    "output-files": "^2.0.32",
-    "playwright": "^1.52.0",
-    "playwright-chromium": "^1.52.0",
-    "webextension-polyfill": "^0.12.0"
+    "output-files": "^3.0.0"
+  },
+  "peerDependencies": {
+    "depcheck": "*"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "publishConfig": {
     "access": "public"
