--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,4 +2,4 @@ ignoredBuiltDependencies:
   - esbuild
   - spawn-sync
 onlyBuiltDependencies:
-  - playwright-chromium
+  - '@playwright/browser-chromium'
