--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@dword-design/base": "^15.2.3",
     "@dword-design/depcheck-parser-sass": "^5.0.0",
+    "@dword-design/stylelint-config": "^4.1.0",
     "@semantic-release/exec": "^6.0.3",
     "@wxt-dev/module-vue": "^1.0.2",
     "depcheck-package-name": "^4.0.0",
@@ -42,6 +43,7 @@
     "ini": "^5.0.0",
     "lodash-es": "^4.17.21",
     "output-files": "^3.0.0",
+    "stylelint": "^16.23.0",
     "wxt": "npm:@dword-design/wxt-fork@^0.0.2"
   },
   "devDependencies": {
