--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ini": "^6.0.0",
     "lodash-es": "^4.17.21",
     "output-files": "^3.0.0",
+    "read-pkg": "^10.0.0",
     "stylelint": "^16.23.0",
     "wxt": "npm:@dword-design/wxt-fork@^0.0.2"
   },
