--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "execa": "^9.6.0",
     "fs-extra": "^11.3.0",
     "ini": "^6.0.0",
+    "jiti": "^2.6.1",
     "lodash-es": "^4.17.21",
     "output-files": "^3.0.0",
     "read-pkg": "^10.0.0",
+    "require-package-name": "npm:@dword-design/require-package-name-fork@^0.0.1",
     "stylelint": "^16.23.0",
     "wxt": "npm:@dword-design/wxt-fork@^0.0.2"
   },
   "devDependencies": {
+    "@dword-design/defu": "^1.0.3",
     "@playwright/browser-chromium": "^1.54.1",
     "@playwright/test": "^1.54.1",
     "@types/express": "^5.0.3",
