--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
       - run: git config --global user.email "actions@github.com"
       - run: git config --global user.name "GitHub Actions"
       - run: pnpm install --frozen-lockfile
-      - run: pnpm checkUnknownFiles
       - run: pnpm lint
       - env:
           GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
@@ -42,9 +41,7 @@ jobs:
           node-version: ${{ matrix.node }}
       - run: corepack enable
       - run: pnpm install --frozen-lockfile
-      - env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: pnpm verify
+      - run: pnpm verify
       - if: always()
         uses: actions/upload-artifact@v4
         with:
