--- a/package.json
+++ b/package.json
@@ -29,34 +29,34 @@
     "verify": "base verify"
   },
   "dependencies": {
-    "@dword-design/base": "^16.0.0",
-    "@dword-design/depcheck-parser-sass": "^5.0.0",
-    "@dword-design/stylelint-config": "^5.0.1",
+    "@dword-design/base": "^16.2.1",
+    "@dword-design/depcheck-parser-sass": "^6.0.3",
+    "@dword-design/stylelint-config": "^5.0.2",
     "@semantic-release/exec": "^7.1.0",
-    "@wxt-dev/module-vue": "^1.0.2",
-    "depcheck-bin-name": "^2.0.0",
-    "depcheck-package-name": "^4.0.0",
+    "@wxt-dev/module-vue": "^1.0.3",
+    "depcheck-bin-name": "^3.0.0",
+    "depcheck-package-name": "^5.0.0",
     "endent": "npm:@dword-design/endent@^1.4.7",
-    "execa": "^9.6.0",
-    "fs-extra": "^11.3.0",
+    "execa": "^9.6.1",
+    "fs-extra": "^11.3.3",
     "ini": "^6.0.0",
     "jiti": "^2.6.1",
-    "lodash-es": "^4.17.21",
+    "lodash-es": "^4.17.22",
     "output-files": "^3.0.0",
     "read-pkg": "^10.0.0",
     "require-package-name": "npm:@dword-design/require-package-name-fork@^0.0.1",
-    "stylelint": "^16.23.0",
+    "stylelint": "^16.26.1",
     "wxt": "npm:@dword-design/wxt-fork@^0.0.6"
   },
   "devDependencies": {
-    "@dword-design/defu": "^1.0.3",
-    "@playwright/browser-chromium": "^1.54.1",
-    "@playwright/test": "^1.54.1",
-    "@types/express": "^5.0.3",
+    "@dword-design/defaults": "^1.1.1",
+    "@playwright/browser-chromium": "^1.57.0",
+    "@playwright/test": "^1.57.0",
+    "@types/express": "^5.0.6",
     "@types/fs-extra": "^11.0.4",
     "@types/ini": "^4.1.1",
     "@types/lodash-es": "^4.17.12",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "get-port": "^7.1.0"
   },
   "peerDependencies": {
